--- a/css/index.css
+++ b/css/index.css
@@ -110,9 +110,9 @@ section aside article:hover {
 
 section aside article img {
     filter: invert();
-
+/* 
     min-height: var(--max-width-img);
-    min-width: var(--max-width-img);
+    min-width: var(--max-width-img); */
 
     max-height: var(--max-width-img);
     max-width: var(--max-width-img);
